--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -4,38 +4,38 @@
 }
 
 .search-bar input {
-    background-color: #2f353f;
+    background-color: #141920;
     border: 2px solid transparent;
-    border-radius: 16px;
-    color: #c7c8ec;
-    font-size: 24pt;
+    border-radius: 48px;
+    color: #bad9d3;
+    font-size: 20pt;
     outline: none;
-    padding: 0.5em 1em;
+    padding: 16px 48px;
 }
 
 .search:hover input,
 .search-bar input:hover {
-    background-color: #2c333d;
-    border-color: #4b4b5a; 
+    /* background-color: #1f353d; */
+    border-color: #2a6e62; 
 }
 
 .search-bar input:focus {
-    background-color: #2c333d;
-    border-color: #c4c5e6;
-    box-shadow: 0 0 4px #c7c8ec99;    
+    /* background-color: #271a24; */
+    border-color: #bad9d3;
+    box-shadow: 0 0 4px #bad9d399;    
 }
 
 .search-icon {
-    color: #5c5d73;
+    color: #2b454e;
     padding: 0.5em;
-
+    
 }
 
 .search:hover .search-icon {
-    color: #72748f;
+    color: #2a6e62;
 } 
 
 .search:focus-within .search-icon {
-    color: #c7caf0;
+    color: #bad9d3;
 } 
 
