--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 .App {
     padding: 2em;
 }
+
+header {
+    display: flex;
+    align-items: center;
+    margin: 10px 0 40px;
+    justify-content: space-between;
+}
